Fix contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 	--link-color: #010414;
 	--bg-color: #01a3d7;
 	--header-bg-color: #ffc656;
-	--header-contrast-color: #c40606;
+	--header-contrast-color: #B10606;
 }
 
 /* dark theme */
